fixed overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,7 @@
 body{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     margin: 0;
+    overflow-y: hidden;
+
 }
