--- a/styles/main.module.css
+++ b/styles/main.module.css
@@ -24,6 +24,7 @@
     box-shadow: 9px 9px;
     padding-left: 12px;
     padding-right: 12px;
+    z-index: 100;
 
 }
 
@@ -59,114 +60,6 @@
 
 
 
-/* center text for small screen */ 
-/* @media only screen and (max-width: 1500px) {
-    .imageWrapper{
-        margin-top: 0px;
-    }  
-  }
-
-@media only screen and (max-width: 1200px) and (max-height: 600px) and (min-height: 600px) {
-    .imageWrapper{
-        margin-top: 200px;
-    }  
-  }
-
-
-  @media only screen and (max-width: 380px) and (min-height: 650px) {
-    .imageWrapper{
-        margin-top: 20px;
-    }  
-    }
-
-@media only screen and (min-width: 400px) and (max-width: 600px) and (min-height: 500px)  {
-    .imageWrapper{
-        margin-top: 125px;
-    }  
-  }
-  @media only screen and (min-width: 400px) and (max-width: 600px) and (min-height: 600px)  {
-    .imageWrapper{
-        margin-top: 175px;
-    }  
-  }
-
-@media only screen and (max-width: 850px) and (max-width: 1200px) and (min-width: 900px)  {
-    .imageWrapper{
-        margin-top: 200px;
-    }  
-  }
-  @media only screen and (max-width: 850px)  {
-    .logos{
-        bottom: 0px;
-        left: 0px;    
-        position: relative;
-        width: 10%;
-        padding-left: 8px;
-        padding-right: 8px;
-
-        margin: 0 auto;
-    }
-    }
-
-    
-
-    @media only screen and (max-width: 600px)  {
-        .logos{
-            bottom: 0px;
-            left: 0px;    
-            position: relative;
-            width: 10%;
-            padding-left: 8px;
-            padding-right: 8px;
-            
-            margin: 0 auto;
-        }
-        }
-    
-
-@media only screen and (max-width: 700px) and (max-height: 600px) and (min-height: 600px) {
-    .imageWrapper{
-        margin-top: 200px;
-    }  
-  }
-
-@media only screen and (max-width: 700px) and (max-height: 500px) and (min-height: 400px) {
-    .imageWrapper{
-        margin-top: 45px;
-    }  
-  }
-
-  @media only screen and (max-width: 600px) and (max-height: 600px) and (min-height: 600px) {
-    .imageWrapper{
-        margin-top: 250px;
-    }  
-  }
-
-
-  @media only screen and (max-width: 500px) and (max-height: 600px) and (min-height: 600px) {
-    .imageWrapper{
-        margin-top: 300px;
-    }  
-  }
-
-  @media only screen and (max-width: 420px) and (max-height: 700px) {
-    .imageWrapper{
-        margin-top: 250px;
-    }  
-  }
-
-  @media only screen and (max-width: 420px) and (max-height: 750px) {
-    .imageWrapper{
-        margin-top: 250px;
-    }  
-  }
-  
-  @media only screen and (max-width: 420px) and (max-height: 900px) {
-    .imageWrapper{
-        margin-top: 290px;
-    }  
-  }
- */
 
  @media only screen and (max-width: 850px)  {
         .logos{
@@ -194,7 +87,7 @@
             bottom: 0px;
             left: 0px;    
             position: relative;
-            width: 10%;
+            width: 13%;
             padding-left: 8px;
             padding-right: 8px;
             
